--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <form class="form-login">
         <div class="header-login">
-            <img src="/img/brain.png" alt="Ícone Cérebro">
+            <img src="img/brain.png" alt="Ícone Cérebro">
             <h1>Jogo da Memória</h1>
         </div>
         <input type="text" placeholder="Seu Nome" class="input-login">
