--- a/posjogo.html
+++ b/posjogo.html
@@ -16,7 +16,7 @@
 <body>
     <form class="form-login">
         <div class="header-login">
-            <img src="/img/brain.png" alt="Ícone Cérebro">
+            <img src="img/brain.png" alt="Ícone Cérebro">
             <h1>Jogo da Memória</h1>
             <p></p>
             <button class="jogue-novamente"><a href="index.html">Jogue Novamente!</a></button>
