--- a/posjogo.html
+++ b/posjogo.html
@@ -18,8 +18,7 @@
         <div class="header-login">
             <img src="img/brain.png" alt="Ícone Cérebro">
             <h1>Jogo da Memória</h1>
-            <p></p>
-            <button class="jogue-novamente"><a href="index.html">Jogue Novamente!</a></button>
+            <button class="jogue-novamente"><a href="jogo.html">Jogue Novamente!</a></button>
         </div>
     </form>
 </body>
