--- a/posjogo.html
+++ b/posjogo.html
@@ -17,7 +17,7 @@
     <form class="form-login">
         <div class="header-login">
             <img src="img/brain.png" alt="Ícone Cérebro">
-            <h1>Jogo da Memória</h1>
+            <h1>Você conseguiu, parabéns!</h1>
             <button class="jogue-novamente"><a href="jogo.html">Jogue Novamente!</a></button>
         </div>
     </form>
